@@ -1,3 +1,8 @@
+2004-11-20  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* tests/intr.c: Make the ISR call the DSR to make sure this works
+	correctly.
+
 2004-08-22  Gary Thomas  <gary@mlbassoc.com>
 
 	* doc/porting.sgml: Replace [very misleading dated] comments
